--- a/source/package.json
+++ b/source/package.json
@@ -1,6 +1,6 @@
 {
   "name": "watchface-versa-apfel",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
@@ -8,7 +8,7 @@
     "@fitbit/sdk-cli": "^1.0.1"
   },
   "fitbit": {
-    "appUUID": "57f62034-91e0-42f8-bdf2-a078e1cb3b41",
+    "appUUID": "b2aa6501-58d9-4a1e-bb44-8c6dde94b3da",
     "appType": "clockface",
     "appDisplayName": "Apfel",
     "iconFile": "resources/icon.png",
@@ -21,10 +21,12 @@
       "access_user_profile"
     ],
     "buildTargets": [
-      "higgs",
       "meson"
     ],
-    "i18n": {}
+    "i18n": {
+      "en": {
+        "name": "Apfel"
+      }}
   },
   "scripts": {
     "build": "fitbit-build",
